Fixes for styles, added scrollbar

--- a/front-end/azienda/src/assets/styles.css
+++ b/front-end/azienda/src/assets/styles.css
@@ -14761,4 +14761,9 @@ div.dp-input-container> input.dp-picker-input:disabled {
   color: #FF667D
 }
 
+ngb-typeahead-window.dropdown-menu {
+  max-height: 400px !important;
+  overflow-y: auto;
+}
+
 /**/
